# lab-ztp-provisioner

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IDEA.md  LICENSE  README.md  go.mod  go.sum  justfile
.github/workflows/: ci.yml  release.yml
ci/: publish.sh
clients/rust/: Cargo.toml  Dockerfile  build.rs  rust-toolchain.toml
clients/rust/src/: appliers.rs  ble.rs  canonical.rs  clock.rs  encrypt.rs  enroll.rs  facts.rs  identity.rs  lib.rs  logging.rs  main.rs  mdns.rs  sign.rs  transport.rs  wire.rs
clients/rust/tests/: protocol_vectors.rs
cmd/ztp-agent/: ble.go  ble_unsupported.go  main.go  transport_test.go
cmd/ztp-app/: console_other.go  console_windows.go  icon.go  main.go  wails.json
cmd/ztp-mdns-publish/: main.go
cmd/ztp-server/: main.go
cmd/ztpctl/: main.go  secrets.go
deploy/: .env.example  Caddyfile  Caddyfile.mkcert  docker-compose.ghcr.yaml  docker-compose.minimal.yaml  docker-compose.yaml
deploy/config/: ztp-app.yaml  ztp-server.yaml
deploy/data/: age.key.pub  signing.key.pub
deploy/profiles.d/: default.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  followups.md
examples/: agent.toml  ztp-server.yaml
examples/profiles.d/: README.md  default.yaml
internal/agent/: e2e_test.go  envelope.go  errors.go  run.go  run_test.go  system_clock.go  system_clock_test.go
internal/agent/appliers/: dispatch.go
internal/agent/clock/: clock.go  clock_other.go  clock_test.go  clock_unix.go
internal/agent/facts/: facts.go
internal/agent/identity/: identity.go
internal/agent/logging/: multi.go  multi_test.go  rotating.go  rotating_test.go
internal/desktop/: app.go  bindings_ble.go  c8y_credentials.go  capabilities_ble.go  capabilities_noble.go  open_path.go
internal/mdns/: bonjour_darwin.go  bonjour_other.go  mdns.go
internal/server/: engine.go  engine_seal_test.go  engine_test.go  internals.go
internal/server/api/: api.go  configfiles.go  hub.go  profiles.go  runtimeconfig.go  serverinfo.go  tokens.go
packaging/: nfpm-alpine-go.yaml  nfpm-alpine-rust.yaml  nfpm-go.yaml  nfpm-rust.yaml
packaging/openrc/: ztp-agent
packaging/scripts/: postinstall-alpine.sh  postinstall.sh  preremove-alpine.sh  preremove.sh
packaging/systemd/: ztp-agent.service
pkg/protocol/: canonical.go  encrypt.go  encrypt_test.go  protocol_test.go  sign.go  testvectors_gen_test.go  textmanifest.go  wire.go
pkg/sopsage/: age.go  decrypt.go  decrypt_test.go  doc.go  edit.go  encrypt.go  encrypt_test.go  format.go  leaf.go  testhelpers_test.go  yamltag.go
scripts/: mdns-publish-macos.sh
scripts/agent/: ztp-agent.sh
scripts/appliers/: c8y.v2.sh  files.v2.sh  hook.v2.sh  passwd.v2.sh  ssh.authorized_keys.v2.sh  wifi.v2.sh
web/: package.json  package.json.md5  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.html
(+80 files in other folders)
